[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = "This project is a set of text mathematical games. List contains: brain-even, brain-calc, brain-gcd, brain-progression, brain-prime"
authors = ["Алексей Фоминых <foma1994@yandex.ru>"]
repository = "https://github.com/Ky3mu40FF/python-project-lvl1"
packages = [
    { include = "brain_games" },
]
classifiers  = [
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
